# NetHackHarness

./: .dockerignore  .gitignore  .gitmodules  .venv  AGENTS.md  Dockerfile.console  Dockerfile.prime  README.md  SESSION_SUMMARY.md  WAKE_UP.md  experiment_log.md  pyproject.toml
approaches/: README.md
configs/: endpoints.toml
docs/: CAPABILITIES.md  CURRICULUM.md  CURRICULUM_PRIMITIVES_RESULTS.md  CURRICULUM_RESULTS.md  CURRICULUM_RL_RESULTS.md  EVAL_RECIPES.md  HUB_VERSIONS.md  MONDAY_TALKING_POINTS.md  NAV_MODE_ITERATION_REPORT.md  PROMPTING_SURVEY.md  REPO_MAP.md  RESULTS_COLLATION_V3.md  TRACE_SHOWCASE_failure.md  TRACE_SHOWCASE_floor4.md  TRAINING_RECIPE.md  arena_memory_map.txt  design.md  engine-layer.md  game_memory_map.txt  netplay-parity-report.md  netplay-parity-writeup.md  netplay-vs-our-harness.md
environments/nethack/: .gitignore  README.md  harness_overlay.py  hatch_build.py  nethack.py  pyproject.toml
environments/nethack/.claude/skills/: optimize-environments
environments/nethack/.prime/: .env-metadata.json
environments/nethack/.prime/lab/agent-mcp/: claude.json
environments/nethack/.prime/lab/docs/: index.md
environments/nethack/.prime/lab/templates/configs/eval/: llama-3.toml  nemotron-3.toml  qwen-3-5-moe.toml
environments/nethack/.prime/lab/templates/configs/gepa/: nemotron-3.toml  qwen-3-5-moe.toml
environments/nethack/.prime/lab/templates/configs/rl/: llama.toml  nemotron.toml  qwen-moe.toml  qwen.toml
environments/nethack/.prime/skills/brainstorm/: .prime-managed-link
environments/nethack/.prime/skills/browse-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/create-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/evaluate-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/optimize-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/optimize-with-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/review-environments/: .prime-managed-link  SKILL.md
environments/nethack/.prime/skills/train-with-environments/: .prime-managed-link  SKILL.md
environments/nethack/configs/eval/: qwen-3-5-vl.toml  qwen-3-5.toml
environments/nethack/configs/gepa/: llama-3.toml  qwen-3-5.toml
environments/nethack/configs/rl/: gpt-oss.toml
environments/nethack/environments/: AGENTS.md
environments/nethack/experiments/results/hub_haiku_v0063/evals/nethack--anthropic--claude-haiku-4.5/b52f3520/: metadata.json  results.jsonl
environments/nethack/nethack_core/: _engine.py  build_engine.sh  code_mode.py  curriculum_env.py  curriculum_primitives_env.py  engine_env.py  env.py  map_model.py  nld_parse.py  observations.py  pathfinding.py  rewards.py  skills.py  subgoals.py  wiki.py
environments/nethack/nethack_harness/: __init__.py  helpers.py  refiner.py
environments/nethack/nethack_harness/curriculum/: __init__.py  curriculum.py  milestones.py  subgoals.py
environments/nethack/nethack_harness/memory/: __init__.py  journal.py
environments/nethack/nethack_harness/navigation/: __init__.py  pathfinding.py
environments/nethack/nethack_harness/prompt/: __init__.py  balrog.py  content.py  image_render.py  map_encoders.py  prompt_spec.py  rendering.py
environments/nethack/nethack_harness/tools/: __init__.py  code_mode.py  skills.py  wiki.py
environments/nethack/tests/: test_branch.py  test_checkpoint.py  test_core_env_cutover.py  test_curriculum_env.py  test_curriculum_traversal.py  test_engine_binding.py  test_engine_concurrency.py  test_engine_env.py  test_engine_obs.py  test_engine_smoke.py  test_env_setup_overrides.py  test_generation.py  test_glyphs.py  test_golden_parity.py  test_level_blob.py  test_modify.py  test_nld_parse.py  test_obs_creator.py  test_reset_speedup.py  test_reward_model.py  test_snapshot.py  test_snapshot_completeness.py  test_snapshot_multilevel.py  test_tune.py  test_vision_overlay.py
environments/nethack/tests/golden/: record_nle_trace.py  trace_score_seed42.npz
environments/nethack/wiki/: snapshot.json
experiments/: README.md  REPORT.md  baseline_agents.py  build_report.py  exp01_seeding.py  exp02_scout_reward.py  exp03_menu_masking.py  exp04_bootstrap.py  exp05_terminal_detection.py  exp08_autoexplore.py  exp13_code_mode.py  exp14_subgoal_achievement.py  exp15_token_savings.py  exp16_obs_variants.py  run_all.py  wave2_collect.py
legacy/: __init__.py  puffer_env.py  replay.py
nethack_core/: __init__.py  _engine.py  actions.py  build_engine.sh  curriculum.py  curriculum_engine_env.py  curriculum_env.py  curriculum_primitives_env.py  curriculum_upgrade.py  engine_env.py  env.py  glyphs.py  journal.py  map_model.py  milestones.py  observations.py  puffer_env.py  pyproject.toml  refiner.py  replay.py  skills.py  trace_schema.py
nethack_interface/: __init__.py  actions.py  env.py  observation.py  pyproject.toml
tests/: conftest.py  test_adjacent_hostiles.py  test_assistant_content_sanitizer.py  test_balrog.py  test_belief_state.py  test_code_mode.py  test_compose_user_content.py  test_curriculum.py  test_encoding_eval_aggregate.py  test_encoding_eval_replay.py  test_encoding_eval_run.py  test_end_to_end_cohesion.py  test_eval_instrument.py  test_explore_combat.py  test_explore_search.py  test_frontier_detection.py  test_history_compaction.py  (+42 more)
tools/launchpad/: CONTRACTS.md  SPEC.md  __init__.py  __main__.py  cli.py  mockup.html  pyproject.toml  types.py
tools/launchpad/core/: __init__.py  git.py  harness.py  launcher.py  legacy_trace.py  live.py  runs.py  traces.py  trainer.py
tools/launchpad/harnesses/: variants.toml
tools/launchpad/tests/: test_harness.py  test_launcher.py  test_live.py  test_overlay.py  test_runs.py  test_smoke.py  test_traces.py  test_traces_screen.py  test_trainer.py
tools/launchpad/tui/: __init__.py  app.py
tools/launchpad/tui/screens/: __init__.py  harness.py  launch.py  play.py  traces.py  train.py
tools/launchpad/tui/widgets/: __init__.py  ascii_map.py  knob_slider.py  llm_turn.py  log_tail.py  metric_chart.py  scrubber.py
(+405 files in other folders)
