[project]
name = "nethack-engine"
version = "0.0.1"
description = "Workspace root for the NetHack engine: nethack_core (libnethack.so ctypes binding over the NetHack fork) + nethack_interface (typed raw interface)."
requires-python = ">=3.10,<3.14"
dependencies = []

[tool.uv.workspace]
members = ["nethack_core", "nethack_interface"]

[tool.uv.sources]
nethack-core = { workspace = true }
nethack-interface = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
