[project]
name = "nethack-interface"
version = "0.0.1"
description = "Typed PySC2-style interface to NetHack over nethack_core."
requires-python = ">=3.10,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
