[project]
name = "nethack"
description = "Training-grade NetHack environment for LM agents with skill-based tools, milestone curriculum, replay capture, and journal memory."
tags = ["games", "long-horizon", "tool-use", "procgen", "train", "eval"]
version = "0.0.66"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Jonathan Liu", email = "jl0796@princeton.edu" }]

dependencies = [
    "verifiers>=0.1.14",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "datasets>=2.14",
    # Image-observation raster path (tty PNG). The glyph-tile IMG path needs the
    # optional 'img' extra (minihack's GlyphMapper tileset); without it,
    # image_render degrades with a clear "tileset unavailable" error.
    "pillow>=10",
]

[project.optional-dependencies]
wiki     = ["chromadb>=0.4", "sentence-transformers>=2.2"]
dev      = ["pytest", "pytest-asyncio", "ruff", "mypy"]
# Glyph-tile image rendering (IMG / IMG_TTY variants). Pulls in minihack's
# GlyphMapper tileset (and its nle dep). Not needed for the text/tty paths.
img      = ["minihack>=1.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nethack.py", "nethack_harness/**/*.py", "nethack_core/**/*.py", "wiki/*.json", "README.md"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["nethack_core", "nethack_harness"]
# The fork engine (libnethack.so) + NetHack data files (dat/) are placed in
# nethack_core/ at build time by the hatch_build.py hook above (or ahead of time
# by tools/bundle_for_hub.py) — the Hub has no fork source to build from. They
# are gitignored build artifacts, so force-include adds them to the wheel (it
# bypasses VCS-ignore + standard include rules, adding each file exactly once).
# This makes the wheel platform-specific; the env targets Linux x86-64.
force-include = { "nethack.py" = "nethack.py", "wiki/snapshot.json" = "wiki/snapshot.json", "nethack_core/libnethack.so" = "nethack_core/libnethack.so", "nethack_core/dat" = "nethack_core/dat" }
