[project]
name = "nethack"
description = "Training-grade NetHack environment for LM agents with skill-based tools, milestone curriculum, replay capture, and journal memory."
tags = ["games", "long-horizon", "tool-use", "procgen", "train", "eval"]
version = "0.0.68"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Jonathan Liu", email = "jl0796@princeton.edu" }]

dependencies = [
    "verifiers>=0.1.14",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "datasets>=2.14",
    # Image-observation raster path (tty PNG). The glyph-tile IMG path needs the
    # optional 'img' extra (minihack's GlyphMapper tileset); without it,
    # image_render degrades with a clear "tileset unavailable" error.
    "pillow>=10",
]

[project.optional-dependencies]
wiki     = ["chromadb>=0.4", "sentence-transformers>=2.2"]
dev      = ["pytest", "pytest-asyncio", "ruff", "mypy"]
# Glyph-tile image rendering (IMG / IMG_TTY variants). Pulls in minihack's
# GlyphMapper tileset (and its nle dep). Not needed for the text/tty paths.
img      = ["minihack>=1.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nethack.py", "nethack_harness/**/*.py", "nethack_core/**/*.py", "wiki/*.json", "README.md"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["nethack_core", "nethack_harness"]
# The fork engine (libnethack.so) + NetHack data files (dat/) are placed in
# nethack_core/ at build time by the hatch_build.py hook above (or ahead of time
# by tools/bundle_for_hub.py) when the fork source is available — e.g. a local
# `prime env push`, whose uploaded wheel then carries the engine.
#
# `artifacts` (NOT force-include) un-VCS-ignores them so they're added to the
# wheel WHEN PRESENT, but the build still SUCCEEDS when they're absent — which is
# what lets the Hub's source-build integration test (`uv pip install <src>`, run
# in a clean container with no fork source) pass. force-include would instead
# hard-fail with "Forced include not found". The engine targets Linux x86-64.
#
# The vendored `nethack_core/` copy itself is now git-ignored (a build artifact
# regenerated by tools/bundle_for_hub.py; source of truth is the workspace-root
# nethack_core/). Because hatchling excludes git-ignored files by default, its
# `.py` sources and build_engine.sh are listed here too so `prime env push`
# still packs a self-contained nethack_core into the wheel. They are only
# present after `python tools/bundle_for_hub.py`; when absent (source-only test
# builds) the build still succeeds.
artifacts = [
    "nethack_core/**/*.py",
    "nethack_core/build_engine.sh",
    "nethack_core/libnethack.so",
    "nethack_core/dat/**/*",
]
force-include = { "nethack.py" = "nethack.py", "wiki/snapshot.json" = "wiki/snapshot.json" }
