[project]
name = "nethack-launchpad"
version = "0.1.0"
description = "Unified CLI + Textual TUI for launching evals, training, and inspecting NetHack rollouts."
requires-python = ">=3.10,<3.14"
dependencies = [
    "textual>=0.80",
    "typer>=0.12",
    "watchfiles>=0.21",
    "tomli-w",
    "rich",
    "pydantic>=2",
]

[project.scripts]
launchpad = "tools.launchpad.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.sources]
"." = "tools/launchpad"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py"   = "tools/launchpad/__init__.py"
"__main__.py"   = "tools/launchpad/__main__.py"
"cli.py"        = "tools/launchpad/cli.py"
"types.py"      = "tools/launchpad/types.py"
"core"          = "tools/launchpad/core"
"tui"           = "tools/launchpad/tui"
"harnesses"     = "tools/launchpad/harnesses"
